--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-immer-reactn",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "React hooks for using Immer with ReactN",
   "author": "Mat Lipe",
   "license": "MIT",
@@ -31,18 +31,16 @@
   "scripts": {
     "build": "microbundle"
   },
-  "dependencies": {
-    "immer": "^3.2.0"
-  },
   "peerDependencies": {
+    "immer": "*",
     "react": "^16.8.0",
     "reactn": "*"
   },
   "devDependencies": {
     "@types/react": "^16.8.13",
+    "immer": "^4.0.2",
     "microbundle": "^0.11.0",
     "react": "^16.11.0",
-    "reactn": "^2.2.4",
-    "typescript": "^3.4.3"
+    "reactn": "^2.2.4"
   }
 }
