--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-immer-reactn",
-  "version": "1.0.2",
+  "version": "1.1.0
   "description": "React hook and helper function for using Immer with ReactN",
   "author": "Mat Lipe",
   "license": "MIT",
