--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "typings": "dist/index.d.ts",
   "source": "src/index.ts",
   "files": [
-    "dist/"
+    "dist/",
+    "src/"
   ],
   "keywords": [
     "immer",
