--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -1,7 +1,8 @@
 name: Publish Beta
 env:
-  VERSION: 1.0.0
-  NODE_VERSION: '14.17.6'
+  VERSION: 3.3.0
+  NODE_VERSION: '20.11.0'
+  TZ: 'America/Chicago'
 
 on:
   push:
@@ -10,14 +11,15 @@ on:
 
 jobs:
   publish:
+    name: Publish Beta on npm.js
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: ${{env.NODE_VERSION}}
-          registry-url: 'https://registry.npmjs.org'
-      - run: yarn install
-      - run: npm publish --tag beta
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - uses: ./.github/actions/setup
+
+      - name: Publish to NPM
+        run: npm publish --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
